# securer-string

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.cargo/: deny.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
src/: lib.rs  secure_utils.rs  serde.rs  test_utils.rs
src/secure_types/: array.rs  boxed.rs  mod.rs  string.rs  vec.rs
