[package]
name = "securer-string"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cot-rs/securer-string"
readme = "README.md"
authors = [
    "Mateusz Maćkowski <mateusz@mackowski.org>",
    "Marek Grzelak <marek.grzelak@seqre.dev>",
]
keywords = ["Security", "Memory"]
description = "A data type suitable for storing sensitive information such as passwords and private keys in memory, featuring constant time equality, mlock and zeroing out."

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
libc = "0.2"
subtle = "2"
zeroize = { version = "1", features = ["std"] }
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
